force-app/main/default/objects/Finance_Model__c/Finance_Model__c.object-meta.xml
<CustomObject>
    <label>Finance Model</label>
    <nameField>
        <label>Finance Model Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Finance Models</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>