force-app/main/default/objects/Finance_Model__c/fields/Cash_CAPEX__c.field-meta.xml
<CustomField>
    <fullName>Cash_CAPEX__c</fullName>
    <inlineHelpText>Cash capex ignores existing book value and looks at our cash outlay only</inlineHelpText>
    <label>Cash CAPEX</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>