force-app/main/default/objects/Finance_Model__c/fields/Contract_Term_Months__c.field-meta.xml
<CustomField>
    <fullName>Contract_Term_Months__c</fullName>
    <formula>Text(Opportunity__r.Contract_Term_Mths__c)</formula>
    <label>Contract Term (Months)</label>
    <type>Text</type>
</CustomField>