force-app/main/default/objects/Finance_Model__c/fields/EBITA_Margin__c.field-meta.xml
<CustomField>
    <fullName>EBITA_Margin__c</fullName>
    <formula>EBITA_Annualized__c / Annual_Contract_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EBITA Margin %</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>