force-app/main/default/objects/Finance_Model__c/fields/IRR__c.field-meta.xml
<CustomField>
    <fullName>IRR__c</fullName>
    <label>IRR%</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>