force-app/main/default/objects/Finance_Model__c/fields/Payback_Years__c.field-meta.xml
<CustomField>
    <fullName>Payback_Years__c</fullName>
    <label>Payback (Years)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>